--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.4
 certifi==2020.12.5
 chardet==3.0.4
 dj-database-url==0.5.0
+djangorestframework==3.12.4
 Django==3.2
 django-heroku==0.3.1
 gunicorn==20.1.0
